i-MSCP ChangeLog
~~~~~~~~~~~~~~~~
-------------------------------------------------------------------------------------
i-MSCP 1.1.1.0 (beta 1)
-------------------------------------------------------------------------------------

Features / Enhancements:

Tickets:
	- Fixed #163: Enhancement - Add Support for Roundcube Mail (or switch from Squirrel)
	- Fixed #368: Enhancement - Add custom TXT DNS resource records
	- Fixed #387: Enhancement - php.ini modifications to allow the usage of roundcube
	- Fixed #402: Task - Ajaxplorer - Integrate fix from ajaxplorer forum
	- Fixed #403: Defect - Hosting Plan Secure Code doesn't work
	- Fixed #404: Defect - Missing translations